# rust-crypto-server

./: README.md
html/: index.html  login-error.html  login.html  session-expired.html  signup-error.html  signup-success.html  signup.html  upload-error.html  upload-success.html
html/css/: style.css
rust/activate-user/: 1  Cargo.toml  load.sh
rust/activate-user/src/: main.rs
rust/delete-user/: Cargo.toml  load.sh
rust/delete-user-request/: Cargo.toml  load.sh
rust/delete-user-request/src/: main.rs
rust/delete-user/src/: main.rs
rust/download/: 1  Cargo.toml  load.sh
rust/download/src/: main.rs
rust/lib/auth/: Cargo.toml
rust/lib/auth/src/: lib.rs
rust/lib/file-to-bytes/: Cargo.toml
rust/lib/file-to-bytes/src/: lib.rs
rust/lib/load-private-key/: 1  Cargo.toml
rust/lib/load-private-key/src/: lib.rs
rust/lib/unicode/: Cargo.toml
rust/lib/unicode/src/: lib.rs
rust/lock-user/: Cargo.toml  load.sh
rust/lock-user/src/: main.rs
rust/login/: Cargo.toml  load.sh
rust/login/src/: main.rs
rust/logout/: Cargo.toml  load.sh
rust/logout/src/: main.rs
rust/pub-key/: Cargo.toml  load.sh
rust/pub-key/src/: main.rs
rust/sig/: Cargo.toml  load.sh
rust/sig/src/: main.rs
rust/signup/: Cargo.toml  load.sh
rust/signup/src/: main.rs
rust/start/: Cargo.toml  load.sh
rust/start/src/: main.rs
rust/upload/: Cargo.toml  load.sh
rust/upload-file/: Cargo.toml  load.sh  ~
rust/upload-file/src/: main.rs
rust/upload/src/: main.rs
server/RSA/: key.pem  key.pub
server/passwords/: admin
